[gd_scene load_steps=11 format=3 uid="uid://be7fjskr753i5"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_ev20v"]
[ext_resource type="Texture2D" uid="uid://cvx08cikmaj7o" path="res://Player/Idle.png" id="2_n885w"]
[ext_resource type="Texture2D" uid="uid://cegdhk0e8cr2w" path="res://Player/gun.png" id="3_3pqn0"]
[ext_resource type="Texture2D" uid="uid://7hqk2qikx07c" path="res://Player/walk.png" id="4_h8mj0"]
[ext_resource type="Texture2D" uid="uid://c8e68f010qhpq" path="res://Player/black_circle.png" id="5_8w3yo"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_e0nob"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 3.0
initial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_max = 2.0

[sub_resource type="Animation" id="Animation_pkgh4"]
resource_name = "idle"
length = 3.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2),
"transitions": PackedFloat32Array(1.7411, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 7, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_n885w")]
}

[sub_resource type="Animation" id="Animation_aa6lf"]
resource_name = "walk"
length = 3.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_h8mj0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pigts"]
_data = {
"idle": SubResource("Animation_pkgh4"),
"walk": SubResource("Animation_aa6lf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wieum"]
size = Vector2(50, 34.75)

[node name="Player" type="CharacterBody2D"]
position = Vector2(157, 138)
scale = Vector2(0.8, 0.8)
collision_mask = 29
script = ExtResource("1_ev20v")

[node name="Player_Model" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-1.25, 1.25001)
scale = Vector2(1, 0.955)
texture = ExtResource("2_n885w")
hframes = 8

[node name="Gun" type="Sprite2D" parent="Player_Model"]
position = Vector2(9.99999, 49.7382)
scale = Vector2(0.15, 0.151)
texture = ExtResource("3_3pqn0")

[node name="bullet_pos" type="Node2D" parent="Player_Model/Gun"]
y_sort_enabled = true
position = Vector2(-64.4956, 121.682)
rotation = -1.5708
scale = Vector2(7.60511, 8.06195)

[node name="particle" type="GPUParticles2D" parent="Player_Model/Gun/bullet_pos"]
modulate = Color(0.870588, 0.686275, 0.0313726, 1)
position = Vector2(16, 18)
rotation = 1.5708
scale = Vector2(0.851715, 0.934758)
emitting = false
process_material = SubResource("ParticleProcessMaterial_e0nob")
lifetime = 0.1
one_shot = true

[node name="Mark1" type="Marker2D" parent="Player_Model/Gun/bullet_pos"]
position = Vector2(16, 14)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player_Model"]
libraries = {
"": SubResource("AnimationLibrary_pigts")
}
playback_default_blend_time = 0.1
speed_scale = 2.0

[node name="playercol" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 46.125)
shape = SubResource("RectangleShape2D_wieum")
one_way_collision_margin = 0.0

[node name="FireTIme" type="Timer" parent="."]

[node name="shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.317647)
position = Vector2(-2.50001, 61.25)
rotation = 0.322886
scale = Vector2(0.0202921, 0.0203278)
skew = 0.965167
texture = ExtResource("5_8w3yo")

[connection signal="timeout" from="FireTIme" to="." method="_on_fire_t_ime_timeout"]
